# MCKL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NEWS.md  README.md  tidy.pl
cmake/: FindAESNI.cmake  FindAESNI.cpp  FindAVX.cmake  FindAVX.cpp  FindAVX2.cmake  FindAVX2.cpp  FindAVX512.cmake  FindAVX512.cpp  FindBMI2.cmake  FindBMI2.cpp  FindBigEndian.cmake  FindBigEndian.cpp  FindFMA.cmake  FindFMA.cpp  FindInt128.cmake  FindInt128.cpp  FindJEMalloc.cmake  FindJEMalloc.cpp  FindLittleEndian.cmake  FindLittleEndian.cpp  FindMKL.cmake  FindPOSIX.cmake  FindPOSIX.cpp  FindRDRAND.cmake  FindRDRAND.cpp  FindRDTSCP.cmake  FindRDTSCP.cpp  FindRandom123.cmake  FindSSE2.cmake  FindSSE2.cpp  FindTBB.cmake  FindTBB.cpp  FindTestU01.cmake  FindThread.cmake  MCKL.cmake  MCKLFunction.cmake
config/: Doxyfile.in  front.tex.in  main.md.in  news.md.in  stylesheet.css
docs/: Doxyfile  Makefile  apiref.rst  conf.py  index.rst  intro.rst  math.rst  random.rst  random_distribution.rst  random_rng.rst  random_testu01.rst  stylesheet.css
docs/tabs/: random_distribution.pl  random_rng.pl
example/: CMakeLists.txt
example/pf/: CMakeLists.txt  pf.truth  pf_core.R  pf_cv.R  pf_cv.truth
example/pf/include/: pf.hpp  pf_cv.hpp
example/pf/src/: pf.cpp  pf_core.cpp  pf_cv.cpp  pf_cv.cpp.in  pf_smp.cpp  pf_truth.cpp
example/random/: CMakeLists.txt  random_Threefish1024.txt  random_Threefish512.txt  random_Threefry16x64.txt  random_aes256.txt  random_dirichlet.R  random_normal_mv.R  random_philox2x32_64.data  random_philox2x64.txt  random_philox4x32_64.data  random_philox4x64.data  random_seed_10x32.data  random_seed_10x64.txt  random_seed_11x32.data  random_seed_11x64.data  random_seed_12x32.txt  random_seed_12x64.data  random_seed_13x32.data  random_seed_13x64.data  random_seed_14x32.data  random_seed_14x64.data  random_seed_15x32.data  random_seed_15x64.data  random_seed_16x32.txt  random_seed_16x64.txt  random_seed_1x32.txt  random_seed_1x64.txt  random_seed_2x32.data  random_seed_2x64.txt  random_seed_3x32.txt  random_seed_3x64.data  random_seed_4x32.txt  random_seed_4x64.txt  random_seed_5x32.txt  random_seed_5x64.data  random_seed_6x32.data  random_seed_6x64.data  random_seed_7x32.data  random_seed_7x64.txt  random_seed_8x32.txt  (+14 more)
example/random/include/: random_common.hpp  random_dirichlet.hpp  random_distribution.hpp  random_distribution_perf.hpp  random_mkl_brng.hpp  random_normal_mv.hpp  random_r123.hpp  random_rng.hpp  random_rng_u01.hpp  random_rng_ubits.hpp  random_seed.hpp  random_skein.hpp  random_skein_inc.hpp  random_skein_incr.hpp  random_skein_rand.hpp  random_skein_zero.hpp  random_test.hpp  random_testu01.hpp  random_testu01_bigcrush.hpp  random_testu01_crush.hpp  random_testu01_smallcrush.hpp  random_u01.hpp  random_u01_range.hpp  random_u01_sequence.hpp  random_uniform_bits.hpp
example/random/src/: random_aes.cpp  random_dirichlet.cpp  random_distribution.cpp  random_distribution.cpp.in  random_distribution_perf.cpp  random_distribution_perf.cpp.in  random_mkl_brng.cpp  random_normal_mv.cpp  random_rng.cpp  random_rng.cpp.in  random_rng_u01.cpp.in  random_rng_ubits.cpp.in  random_sampling.cpp  random_seed.cpp  random_seed.cpp.in  random_skein.cpp  random_skein_perf.cpp  random_skein_stream.cpp  random_skein_test.cpp  random_test.cpp  random_test.cpp.in  random_testu01_bigcrush.cpp  random_testu01_bigcrush.cpp.in  random_testu01_crush.cpp  random_testu01_crush.cpp.in  random_testu01_smallcrush.cpp  random_testu01_smallcrush.cpp.in  random_threefish.cpp  random_u01.cpp  random_u01.cpp.in  random_u01_range.cpp  random_u01_sequence.cpp  random_uniform_bits.cpp  random_uniform_bits.cpp.in
lib/: CMakeLists.txt
lib/asm/: aes_aesni.asm  aes_aesni_avx2.asm  aes_aesni_avx512.asm  aes_aesni_sse2.asm  common.asm  exp.asm  exp2.asm  expf.asm  expm1.asm  fma.asm  fma512.asm  fpclassify.asm  log.asm  logf.asm  math.asm  philox_avx2_32.asm  philox_avx512_32.asm  philox_bmi2_2x64.asm  philox_bmi2_4x64.asm  philox_bmi2_64.asm  philox_sse2_32.asm  sincos.asm  sqrt.asm  sqrtf.asm
lib/include/: libmckl.hpp  libmcklrng.hpp
lib/src/core/: core.cpp  monitor.cpp  particle.cpp  sampler.cpp  state_matrix.cpp  weight.cpp
lib/src/random/: mkl_brng.cpp  rand.cpp  rand_64.cpp  rand_arcsine.cpp  rand_bernoulli.cpp  rand_beta.cpp  rand_binomial.cpp  rand_binomial_64.cpp  rand_cauchy.cpp  rand_chi_squared.cpp  rand_discrete.cpp  rand_discrete_64.cpp  rand_exponential.cpp  rand_extreme_value.cpp  rand_fisher_f.cpp  rand_gamma.cpp  rand_geometric.cpp  rand_geometric_64.cpp  rand_laplace.cpp  rand_levy.cpp  rand_logistic.cpp  rand_lognormal.cpp  rand_negative_binomial.cpp  rand_negative_binomial_64.cpp  rand_normal.cpp  rand_normal_mv.cpp  rand_pareto.cpp  rand_poisson.cpp  rand_poisson_64.cpp  rand_rayleigh.cpp  rand_stable.cpp  rand_student_t.cpp  rand_u01.cpp  rand_u01_cc.cpp  rand_u01_co.cpp  rand_u01_oc.cpp  rand_u01_oo.cpp  rand_uniform_int.cpp  rand_uniform_int_64.cpp  rand_uniform_real.cpp  (+20 more)
lib/src/resample/: algorithm.cpp  resample.cpp  transform.cpp  u01_rand_sorted.cpp  u01_rand_stratified.cpp  u01_rand_systematic.cpp  u01_trans.cpp
lib/src/rng/: mkl_brng.cpp  rand.cpp  rand_64.cpp  rand_arcsine.cpp  rand_bernoulli.cpp  rand_beta.cpp  rand_binomial.cpp  rand_binomial_64.cpp  rand_cauchy.cpp  rand_chi_squared.cpp  rand_discrete.cpp  rand_discrete_64.cpp  rand_exponential.cpp  rand_extreme_value.cpp  rand_fisher_f.cpp  rand_gamma.cpp  rand_geometric.cpp  rand_geometric_64.cpp  rand_laplace.cpp  rand_levy.cpp  rand_logistic.cpp  rand_lognormal.cpp  rand_negative_binomial.cpp  rand_negative_binomial_64.cpp  rand_normal.cpp  rand_normal_mv.cpp  rand_pareto.cpp  rand_poisson.cpp  rand_poisson_64.cpp  rand_rayleigh.cpp  rand_student_t.cpp  rand_u01.cpp  rand_u01_cc.cpp  rand_u01_co.cpp  rand_u01_oc.cpp  rand_u01_oo.cpp  rand_uniform_int.cpp  rand_uniform_int_64.cpp  rand_uniform_real.cpp  rand_weibull.cpp  (+18 more)
lib/src/smp/: smp.cpp
lib/src/utility/: aligned_memory.cpp  covariance.cpp  hdf5.cpp  stop_watch.cpp  utility.cpp
manual/: .latexmkrc  Makefile  manual.bib  manual.tex
(+1721 files in other folders)
